--- a/src/stages/deploy/deploy_aws_v1.yml
+++ b/src/stages/deploy/deploy_aws_v1.yml
@@ -62,7 +62,20 @@ stages:
           provider: aws
           command: custom
           workingDirectory: '$(System.DefaultWorkingDirectory)'
-          customCommand: workspace select ${{ parameters.environment }} || workspace new ${{ parameters.environment }}
+          customCommand: workspace
+          commandOptions: 'new ${{ parameters.environment }}'
+          environmentServiceNameAWS: ${{ parameters.backendServiceAWS }}
+          backendServiceAWS: ${{ parameters.backendServiceAWS }}
+          backendAWSBucketName: ${{ parameters.backendAWSBucketName }}
+          backendAWSKey: ${{ parameters.backendAWSKey }}
+      - task: TerraformTaskV3@3
+        displayName: 'TerraformWorkspace ${{ parameters.environment }}'
+        inputs:
+          provider: aws
+          command: custom
+          workingDirectory: '$(System.DefaultWorkingDirectory)'
+          customCommand: workspace
+          commandOptions: 'select ${{ parameters.environment }}'
           environmentServiceNameAWS: ${{ parameters.backendServiceAWS }}
           backendServiceAWS: ${{ parameters.backendServiceAWS }}
           backendAWSBucketName: ${{ parameters.backendAWSBucketName }}
