--- a/src/stages/deploy/deploy_terraform_v1.yml
+++ b/src/stages/deploy/deploy_terraform_v1.yml
@@ -22,5 +22,10 @@ stages:
   parameters:
     environment: 'QA'
     dependsOn: 'DEV_Apply'
+##### QA #####
+- template: deploy_aws_v1.yml
+  parameters:
+    environment: 'PROD'
+    dependsOn: 'QA_Apply'
 
 
